// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-node-cjs-interop doesn't wrap named imports 1`] = `
"const _ns = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"mod\\";
console.log(_ns.f);"
`;

exports[`babel-plugin-node-cjs-interop source filtering allows specifying scoped packages 1`] = `
"const _ns = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

import foo from \\"@foo/foo\\";

/*#__CJS__*/
import * as _nsOrig from \\"@foo/bar\\";
import baz from \\"baz\\";
console.log(foo, _ns.default, baz);"
`;

exports[`babel-plugin-node-cjs-interop source filtering doesn't match non-subdirectory prefixes 1`] = `
"const _ns = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"foo\\";
import bar from \\"foobar\\";
import baz from \\"baz\\";
console.log(_ns.default, bar, baz);"
`;

exports[`babel-plugin-node-cjs-interop source filtering filters multiple sources 1`] = `
"const _ns2 = _interopImportCJSNamespace(_nsOrig2);

const _ns = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"foo\\";

/*#__CJS__*/
import * as _nsOrig2 from \\"bar\\";
import baz from \\"baz\\";
console.log(_ns.default, _ns2.default, baz);"
`;

exports[`babel-plugin-node-cjs-interop source filtering filters sources 1`] = `
"const _ns = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"foo\\";
import bar from \\"bar\\";
console.log(_ns.default, bar);"
`;

exports[`babel-plugin-node-cjs-interop source filtering matches subdirectories 1`] = `
"const _ns2 = _interopImportCJSNamespace(_nsOrig2);

const _ns = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"foo\\";

/*#__CJS__*/
import * as _nsOrig2 from \\"foo/bar\\";
import baz from \\"baz\\";
console.log(_ns.default, _ns2.default, baz);"
`;

exports[`babel-plugin-node-cjs-interop with typescript doesn't wrap named imports 1`] = `
"const _ns = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"mod\\";
console.log(_ns.f);"
`;

exports[`babel-plugin-node-cjs-interop with typescript doesn't wrap type imports (default imports) 1`] = `"export {};"`;

exports[`babel-plugin-node-cjs-interop with typescript doesn't wrap type imports (named default imports) 1`] = `"export {};"`;

exports[`babel-plugin-node-cjs-interop with typescript doesn't wrap type imports (named default imports, individual specification) 1`] = `"export {};"`;

exports[`babel-plugin-node-cjs-interop with typescript doesn't wrap type imports (namespace imports) 1`] = `"export {};"`;

exports[`babel-plugin-node-cjs-interop with typescript wraps default imports 1`] = `
"const _ns = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"mod\\";
console.log(_ns.default);"
`;

exports[`babel-plugin-node-cjs-interop with typescript wraps named default imports 1`] = `
"const _ns = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"mod\\";
console.log(_ns.default);"
`;

exports[`babel-plugin-node-cjs-interop with typescript wraps namespace imports 1`] = `
"const M = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"mod\\";
console.log(M);"
`;

exports[`babel-plugin-node-cjs-interop wraps default imports 1`] = `
"const _ns = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"mod\\";
console.log(_ns.default);"
`;

exports[`babel-plugin-node-cjs-interop wraps named default imports 1`] = `
"const _ns = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"mod\\";
console.log(_ns.default);"
`;

exports[`babel-plugin-node-cjs-interop wraps namespace imports 1`] = `
"const M = _interopImportCJSNamespace(_nsOrig);

function _interopImportCJSNamespace(ns) {
  return ns.default && ns.default.__esModule ? ns.default : ns;
}

/*#__CJS__*/
import * as _nsOrig from \\"mod\\";
console.log(M);"
`;
